test/types/string/assignToChar/testInit.11.good
Helpers.chpl:2: In function 'testInit':
Helpers.chpl:3: error: cannot initialize 'x' of type 'uint(8)' from '"hello"'
  testInit.chpl:26: called as testInit(param strBytes = "hello", type toType = uint(8))
